--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,8 @@ project:
   output-dir: docs
 
 book:
-  title: "COMP/STAT112 Notebook"
-  author: "Your Name Here"
+  title: "Stat112 Notebook"
+  author: "Tanisha Dodla"
   date: "Date Here"
   reader-mode: true
   
