--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 book:
   title: "Stat112 Notebook"
   author: "Tanisha Dodla"
-  date: "Date Here"
+  date: "2024 Fall"
   reader-mode: true
   
   chapters:
