--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,8 @@ book:
       - notes/Chapter-5.qmd
       - notes/Chapter-6.qmd
       - notes/Chapter-7.qmd
+      - notes/Review.qmd 
+      - notes/Chapter-8.qmd
 
 format:
   html:
