--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,7 @@ book:
       - activities/Wrangling_practice.qmd
       - activities/Reshaping_data.qmd
       - activities/Joining_data.qmd
+      - activities/factors.qmd
     
     - part: notes/README.qmd
       chapters: 
@@ -36,6 +37,7 @@ book:
       - notes/Chapter-9.qmd
       - notes/Chapter-10.qmd
       - notes/Chapter-11.qmd
+      - notes/Chapter-12.qmd
 
 format:
   html:
